	  via a message and when the message queue gets full the sender blocks and
	  touch events are lost.  Basic data overrun.  The badly effects touchscreen
	  human factors.
	* include/sched.h:  Fix a typo (missing semicolon) in prototype of on_exit();
	* sched/on_exit.c and include/nuttx/sched.h:  Fix some old typos that caused
	  compilation errors when CONFIG_SCHED_ONEXIT is defined.
	* configs/stm3240g-eval/nxwm/defconfig:  The default NxWM now uses the STMPE11
	  touchscreen.
	* include/cxx/csched: Added
	* graphic/nxmu/nxmu_sendserver.c, nxmu_sendwindow.c, and nxmu_sendclient.c:
	  Refactor NX messaging logic in preparation for a new message control
	  feature.
	* graphics/nxtk, graphics/nxmu, include/nuttx/nx:  Add a new window communication
	  to support blocking and flushing of client window messages.  If there are
	  stale, queue window messages at the time that a window is destroyed, very bad
	  things happen.

6.19 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* graphics/nxconsole/nxcon_kbdin.c:  If selected, the NxConsole will take
	  input from the NX keyboard input callback.  If this option is set, then
	  the interface nxcon_kdbin() is enabled.  That interface may be driven by
	  window callback functions so that keyboard input *only* goes to the top
	  window. If CONFIG_NXCONSOLE_NXKBDIN is not selected, then the NxConsole
	  will receive its input from stdin (/dev/console).  This works great but
	  cannot be shared between different windows.  Chaos will ensue if you
	  try to support multiple NxConsole windows without CONFIG_NXCONSOLE_NXKBDIN
	* graphics/nxmu/nx_kbdin.c:  Fix pointer argument.  This is a error
	  introduced in changes leading up to the 6.18 release.  This error will
	  cause crashes or perhaps simply not work when you try to handle window
	  keyboard data in multi-user mode.
	* graphics/nxconsole/nxcon_kdbind.c:  Fixed unmatched sem_wait and sem_post.
	  Fix some conditional compilation that included a few too many lines of code.

